--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,7 +3,6 @@
     <h1 class="jumboHeading">Chad's Feline Viral Videos Emporium</h1>
     <h2 class="jumboSubHeading">Viral cat videos since 2015</h2>
     <div><img src="./images/cat_logo.png" /></div>
-    <%= me.id %>
-    <a ng-hide="me.id" href="/signup" class="btn btn-lg btn-success">Sign up now!</a>
+    <a ng-hide="me.id || false" href="/signup" class="btn btn-lg btn-success">Sign up now!</a>
   </div>
 </div>
