added password validation to edit-profile

--- a/assets/templates/edit-profile.html
+++ b/assets/templates/edit-profile.html
@@ -49,21 +49,7 @@
           {{editProfile.changePassword.errorMsg}}
           </code>
         </div>
-        <form ng-submit="changeMyPassword()">
-          <div class="control-group form-group col-md-12">
-            <label>Choose a password</label>
-            <input type="password" class="form-control" placeholder="at least 6 characters" name="password" ng-model="editProfile.properties.password" id="password">
-          </div>
-          <div class="control-group form-group col-md-12">
-            <label>Re-enter your password</label>
-            <input type="password" class="form-control" placeholder="one more time" name="confirmation" ng-model="editProfile.properties.confirmPassword">
-          </div>
-          <button type="submit" class="btn btn-lg btn-success btn-block">
-          <span ng-show="changePasswordForm.saving" class="overlord-loading-spinner fa fa-spinner"></span>
-          <span ng-show="changePasswordForm.saving">Saving...</span>
-          <span ng-hide="changePasswordForm.saving" class="btn-text">Save</span>
-          </button>
-        </form>
+        AIzaSyAiAxndHnxSYbz-zCYiuE_NhkieDWmGexo
       </div>
     </div>
   </div>
